k8/pa-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public-passthrough
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: pingaccess-api-ingress
  namespace: ping-cloud-devops-eks-ttran
spec:
  rules:
  - host: api.pingapac.com
    http:
      paths:
      - backend:
          serviceName: pingaccess
          servicePort: 443

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public-passthrough
    nginx.ingress.kubernetes.io/service-upstream: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: pingaccess-api-acme-ingress
  namespace: ping-cloud-devops-eks-ttran
spec:
  rules:
  - host: api.pingapac.com
    http:
      paths:
      - path: /.well-known/acme-challenge/
        backend:
          serviceName: pingaccess
          servicePort: 80
